--- a/static/admin/config.yml
+++ b/static/admin/config.yml
@@ -33,6 +33,7 @@ collections:
     fields:
       - { label: 'Title', name: 'title', widget: 'string' }
       - { label: 'Publish Date', name: 'date', widget: 'datetime' }
-      - { label: 'Thumbnail', name: 'thumbnail', widget: 'image' }
-      - { label: 'Stock', name: 'stock', widget: 'number' }
-      - { label: 'Description', name: 'description', widget: 'string'}
+      - { label: 'Thumbnail', name: 'thumbnail', widget: 'image', hint: 'Gambar Barang' }
+      - { label: 'Stock', name: 'stock', widget: 'number', hint: 'Stock Barang' }
+      - { label: 'Price', name: 'price', widget: 'string', hint: 'Harga Barang.' }
+      - { label: 'Description', name: 'description', widget: 'string', hint: 'Deskripsi Barang'}
